...
                style={({ pressed }) => [
                  styles.thirdButton,
                  pressed && styles.pressed,
                ]}
                onPress={handleGuestLoginPress}
              >
                <Text style={styles.thirdButtonText}>Continue as guest</Text>
              </Pressable>
            </View>

            <Text style={styles.footerText}>
              For Students, From Students
            </Text>
...
